--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,14 @@
+
 <!DOCTYPE html>
 <html>
   <head>
+    
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   </head>
   <body>
+    <%- include('./partials/header') %>
     <h1>This is batman <%= title %> </h1><br>
     <h2>Welcome to <%= title %></h2>
    
