--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
+<%- include('./partials/header') %>
 
-<!DOCTYPE html>
-<html>
+
   <head>
     
     <title><%= title %></title>
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   </head>
   <body>
-    <%- include('./partials/header') %>
-    <h1>This is batman <%= title %> </h1><br>
-    <h2>Welcome to <%= title %></h2>
+    
+   <br>
+    <h2>This is the Batman Inc <%= title %></h2>
    
   </body>
-</html>
+
+
+<%- include('./partials/footer') %>
