--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,8 +11,14 @@
   <nav>
    
       <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
-      <a href="/portfolios"> Portfolio </a>
+      <a href="/portfolios"  class="link-success login"> Portfolio </a>
+      <a href="../"  class="link-success login"> Home </a>
    
   </nav>
   <main>
     <h1><%= title %></h1>
+
+
+   
+      
+  </body>
