--- a/views/portfolios/index.ejs
+++ b/views/portfolios/index.ejs
@@ -1,35 +1,39 @@
 <%- include('../partials/header') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <title>Portfolio</title>
-  </head>
-  
-  <body>
-    
-    <h3>Create Portfolio</h3>
-    <table class="table table-dark table-hover">
-      <thead>
-        <tr>
-          <th>Portfolio</th>
-          <th>Budget</th>
-          <th>Date</th>
-          <th>Expense</th>
-          <th>Amount</th>
-          <th>Summary</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Write the line of EJS to iterate over movies using forEach -->
-       
-      </tbody>
-    </table>
-  </body>
-  </html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel='stylesheet' href='/stylesheets/style.css' />
+        <title>Portfolio</title>
+    </head>
+
+    <body>
+        <h3>
+            <div class="shadow-lg p-3 mb-5 bg-body rounded"> Create Portfolio</div>
+        </h3>
+        <table id="text" class="table table-dark table-hover table-bordered">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Budget</th>
+                    <th>Expense</th>
+                    <th>Amount</th>
+                    <th>Summary</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Write the line of EJS to iterate over movies using forEach -->
+            </tbody>
+        </table>
+
+
+
+    </body>
+
+    </html>
 
 
 
@@ -40,4 +44,4 @@
 
 
 
-<%- include('../partials/footer') %>
+    <%- include('../partials/footer') %>
