--- a/views/portfolios/index.ejs
+++ b/views/portfolios/index.ejs
@@ -12,27 +12,33 @@
 
     <body>
         <h5>
-           <button class="shadow-lg p-3 mb-5 bg-body rounded"> <a href="portfolios/new" > Create Portfolio </a></button>
+            <form method= "get" action="portfolios/new">
+           <button class="shadow-lg p-3 mb-5 bg-body rounded"> Create Portfolio </button>
+            </form>
         </h5>
         <table id="text" class="table table-dark table-hover table-bordered">
             <thead>
                 <tr>
+                    <th>Portfolio</th>
                     <th>Date</th>
                     <th>Budget</th>
                     <th>Expense</th>
                     <th>Amount</th>
-                    <th>Summary</th>
+                    <th>Sum</th>
+                    
                 </tr>
             </thead>
             <tbody>
                 <% portfolios.forEach(p => { %>
                     <tr>
-                        <td><%= p.date %></td>
-                        <td><%= p.budget %></td>
-                        <td><%= p.expenseType %></td>
-                        <td><%= p.amount %></td>
-                        <td><%= p.amountLeft %></td>
-                      <td><a href="/portfolio/<%= p._id %>">DETAILS</a></td>
+                      <td><%= p.portfolio %></td>
+                      <td><%= p.date %></td>
+                      <td>$<%= p.budget %></td>
+                      <td><%= p.expenseType %></td>
+                      <td>$<%= p.amount %></td>
+                      <td>$<%= p.amountLeft = p.budget - p.amount %></td>
+                    
+            
                     </tr>
                   <!-- Close the forEach using EJS here -->
                   <% }); %>
