--- a/views/portfolios/index.ejs
+++ b/views/portfolios/index.ejs
@@ -6,17 +6,17 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel='stylesheet' href='/stylesheets/style.css' />
+        <link rel='stylesheet' href='/public/stylesheets/style.css' />
         <title>Portfolio</title>
     </head>
 
     <body>
         <h5>
             <form method= "get" action="portfolios/new">
-           <button class="shadow-lg p-3 mb-5 bg-body rounded"> Create Portfolio </button>
+           <button class="shadow-lg p-3 mb-4 bg-body rounded"> Create Portfolio </button>
             </form>
         </h5>
-        <table id="text" class="table table-dark table-hover table-bordered">
+        <table id="text1" class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
                     <th>Portfolio</th>
@@ -32,7 +32,7 @@
                 <% portfolios.forEach(p => { %>
                     <tr>
                       <td><%= p.portfolio %></td>
-                      <td><%= p.date %></td>
+                      <td><%= p.date.toString().slice(0, 15) %></td>
                       <td>$<%= p.budget %></td>
                       <td><%= p.expenseType %></td>
                       <td>$<%= p.amount %></td>
