--- a/views/portfolios/index.ejs
+++ b/views/portfolios/index.ejs
@@ -2,16 +2,18 @@
 
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel='stylesheet' href='/public/stylesheets/style.css' />
-        <title>Portfolio</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+        <link rel='stylesheet' href='/stylesheets/style.css' />
+        <title></title>
     </head>
 
     <body>
         <h5>
+         
             <form method= "get" action="portfolios/new">
            <button class="shadow-lg p-3 mb-4 bg-body rounded"> Create Portfolio </button>
             </form>
@@ -29,7 +31,7 @@
                 </tr>
             </thead>
             <tbody>
-                <% portfolios.forEach(p => { %>
+                <% portfolios.sort((a, b) => b.portfolio.localeCompare(a.portfolio)).forEach(p => { %>
                     <tr>
                       <td><%= p.portfolio %></td>
                       <td><%= p.date.toString().slice(0, 15) %></td>
@@ -37,8 +39,9 @@
                       <td><%= p.expenseType %></td>
                       <td>$<%= p.amount %></td>
                       <td>$<%= p.amountLeft = p.budget - p.amount %></td>
-                      <td><form action="/portfolios/<%= portfolios._id %>?_method=DELETE" method="POST">
-                        <button type="submit">Delete Line</button></td>
+                      <td><form action="/portfolios/<%= p._id %>?_method=DELETE" method="POST">
+                        <button type="submit">x</button></td>
+                        
             
                     </tr>
                   <!-- Close the forEach using EJS here -->
@@ -46,7 +49,7 @@
                 <!-- Write the line of EJS to iterate over movies using forEach -->
             </tbody>
         </table>
-
+        
 
 
     </body>
