Added more edit route

--- a/views/portfolios/index.ejs
+++ b/views/portfolios/index.ejs
@@ -34,7 +34,7 @@
                 <% portfolios.sort((a, b) => b.portfolio.localeCompare(a.portfolio)).forEach(p => { %>
                     <tr>
                      
-                      <td><%= p.portfolio %><a href="/portfolios/edit"> edit</a></td>
+                      <td><%= p.portfolio %><a href="/portfolios/<%= p._id %>"> edit</a></td>
                       <td><%= p.date.toString().slice(0, 15) %></td>
                       <td>$<%= p.budget %></td>
                       <td><%= p.expenseType %></td>
