--- a/views/portfolios/edit.ejs
+++ b/views/portfolios/edit.ejs
@@ -3,18 +3,83 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/newstyles.css' />
     <title></title>
 </head>
 <body>
-    <h1>This is the edit page</h1>
+    <h3>This is the edit page</h3>
 
+    <table   class="table table-dark table-hover">
+        <thead>
+            <tr>
+                <th>Portfolio</th>
+                <th>Date</th>
+                <th>Budget</th>
+                <th>Expense</th>
+                <th>Amount</th>
+                <th>Sum</th>
+                
+            </tr>
+        </thead>
+        <tbody>
+            
+                <tr>
+                  <td><%= editPortfolio.portfolio %></td>
+                  <td><%= editPortfolio.date.toString().slice(0, 15)%></td>
+                  <td>$<%= editPortfolio.budget %></td>
+                  <td><%= editPortfolio.expenseType %></td>
+                  <td>$<%= editPortfolio.amount %></td>
+                  <td>$<%= editPortfolio.amountLeft = editPortfolio.budget - editPortfolio.amount %></td>
+        
+                </tr>
+              <!-- Close the forEach using EJS here -->
+              
+            <!-- Write the line of EJS to iterate over movies using forEach -->
+        </tbody>
+    </table>
 
+    <form action="/portfolios/" method="POST" class="form">
 
-
+  
+    
+        <label>Portfolio
+            <input type="text" name="portfolio" placeholder="Insert portfolio name">
+        </label><br>
+        
+        <label>Budget Amount
+            <input type="number" name="budget" placeholder="Insert budget amount">
+        </label><br>
+        
+          <label>Expense Category
+            <select name="expenseType">
+                <option value="Housing">Housing</option>
+                <option value="Food">Food</option>
+                <option value="Utilities">Utilities</option>
+                <option value="Loans">Loans</option>
+                <option value="Medical">Medical</option>
+                <option value="Insurance">Insurance</option>
+                <option value="Car">Car</option>
+                <option value="Gas">Gas</option>
+                <option value="Other">Other</option>
+            </select>
+          </label><br>
+        
+          <label>Amount Spent
+            <input type="number" name="amount" min="0" max="9999999" placeholder="$$$">
+          </label><br>
+        
+          <label>Date
+            <input type="datetime-local" name="date">
+          </label><br>
+          <input type="submit" class="btn btn-primary" value="Add Portfolio">
+        </form> <form method= "get" action="/portfolios">
+          <button class="btn btn-warning"> Done </button>
+          </form>
+        
+        </table>
 
 </body>
 
