--- a/views/portfolios/index.ejs
+++ b/views/portfolios/index.ejs
@@ -18,6 +18,7 @@
            <button class="shadow-lg p-3 mb-4 bg-body rounded"> Create Portfolio </button>
             </form>
         </h5>
+        
         <table id="text1" class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
@@ -33,7 +34,7 @@
             <tbody>
                 <% portfolios.sort((a, b) => b.portfolio.localeCompare(a.portfolio)).forEach(p => { %>
                     <tr>
-                     
+                        <% if (user && user._id.equals(p.user)) { %>
                       <td><%= p.portfolio %><a href="/portfolios/<%= p._id %>"> edit</a></td>
                       <td><%= p.date.toString().slice(0, 15) %></td>
                       <td>$<%= p.budget %></td>
@@ -42,7 +43,7 @@
                       <td>$<%= p.amountLeft = p.budget - p.amount %></td>
                       <td><form action="/portfolios/<%= p._id %>?_method=DELETE" method="POST">
                         <button type="submit">x</button></td>
-                        
+                        <% } %>
             
                     </tr>
                   <!-- Close the forEach using EJS here -->
