--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@
 
 
 body {
-  margin: 0;
+  margin: auto;
   height: 100vh;
   display: grid;
   grid-template-rows: 50px 1fr;
@@ -19,9 +19,9 @@ body > nav {
   grid-area: nav;
   background-color: #B8C0C2;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 0 20px 0 30px;
+  padding: 0 220px 0 0px;
 }
 
 
@@ -40,9 +40,7 @@ nav > a:hover {
   background-color: #aaadae;
 }
 
-.brand-logo {
-  margin-left: 15px;
-}
+
 
 .card .card-content .card-title {
   margin-bottom: 10px;
@@ -63,7 +61,7 @@ nav > a:hover {
 
 .login {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   height: 34px;
   margin: auto;
@@ -75,12 +73,12 @@ nav > a:hover {
 
 #text {
   color: rgb(234, 234, 234);
-  padding: 50 px
+  /* padding: 50 px */
 
 }
 #text1 {
   color: rgb(1, 1, 1);
-  padding: 50 px
+  /* padding: 50 px */
 
 }
 
