--- a/public/stylesheets/newstyles.css
+++ b/public/stylesheets/newstyles.css
@@ -1,9 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap');
 
+nav  {
+  grid-area: nav;
+  background-color: #B8C0C2;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0 220px 0 0px;
+}
 body {
   margin: 0;
   width: 100vw;
-  height: 100vh;
+  height: 10vh;
   background: #ecf0f3;
   display: flex;
   align-items: center;
@@ -14,10 +22,12 @@ body {
   font-family: poppins;
 }
 
+
 .container {
   position: relative;
   width: 400px;
   height: 500px;
+  padding-bottom: 40px;
   border-radius: 20px;
   padding: 40px;
   box-sizing: border-box;
@@ -108,7 +118,7 @@ a {
 }
 
 h1 {
-  position: absolute;
+  display: none;
   top: 0;
   left: 0;
 }
