--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,10 +15,11 @@ body {
     "main"
 }
 
-body > nav {
-  grid-area: nav;
+ body > nav {
+  display: flex;
   background-color: #B8C0C2;
   display: flex;
+  position: relative;
   justify-content: space-evenly;
   align-items: center;
   padding: 0 220px 0 0px;
