--- a/views/portfolios/edit.ejs
+++ b/views/portfolios/edit.ejs
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/newstyles.css' />
-    <title></title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title display="none"></title>
 </head>
-<body>
+<body><br><br><br><br>
   <div class="brand-title">Edit Portfolio</div>
     
   </div>
 
-    <table   class="table table-dark table-hover">
+    <table  class="table table-striped table-hover table-bordered">
         <thead>
             <tr>
                 <th>Portfolio</th>
@@ -67,6 +67,7 @@
                 <option value="Insurance">Insurance</option>
                 <option value="Car">Car</option>
                 <option value="Gas">Gas</option>
+                <option value="Clothes">Clothes</option>
                 <option value="Other">Other</option>
             </select>
           </label><br>
@@ -78,11 +79,11 @@
           <label>Date
             <input type="datetime-local" name="date" value="<%= detailsPortfolio.date%>">
           </label><br>
-          <input type="submit" class="btn btn-primary" value="Add Portfolio">
+          <input type="submit" class="btn btn-primary" value="Add Edits">
         </form> 
         
         <form method= "get" action="/portfolios">
-          <button class="btn btn-warning"> Done </button>
+          <button class="btn btn-warning"> Return to Portfolio </button>
         </div>
           </form>
         
