--- a/views/portfolios/new.ejs
+++ b/views/portfolios/new.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-    <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/newstyles.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <title></title>
 </head>
 <body>
@@ -35,6 +35,7 @@
         <option value="Insurance">Insurance</option>
         <option value="Car">Car</option>
         <option value="Gas">Gas</option>
+        <option value="Clothes">Clothes</option>
         <option value="Other">Other</option>
     </select>
   </label><br>
