--- a/views/portfolios/edit.ejs
+++ b/views/portfolios/edit.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<!-- <%- include('../partials/header') %> -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,6 +43,7 @@
         </tbody>
     </table>
     <div class="container">
+
       <form name="portfolio" action="/portfolios/<%= detailsPortfolio._id %>?_method=PUT" method="POST" class="form">
         <div class="inputs"></div>
 
@@ -85,7 +86,7 @@
         <form method= "get" action="/portfolios">
           <button class="btn btn-warning"> Return to Portfolio </button>
         </div>
-          </form>
+          </form><br><br><br><br><br><br><br><br><br><br><br>
         
         
 </body>
