--- a/public/stylesheets/newstyles.css
+++ b/public/stylesheets/newstyles.css
@@ -22,6 +22,11 @@ body {
   font-family: poppins;
 }
 
+#lin{
+  background-color: #bdd4e7;
+background-image: linear-gradient(315deg, #bdd4e7 0%, #8693ab 74%);
+color: rgb(54, 52, 52);
+}
 
 .container {
   position: relative;
@@ -46,7 +51,7 @@ body {
 }
 
 .brand-title {
-  margin-top: 10px;
+  margin-top: -25px;
   font-weight: 900;
   font-size: 1.8rem;
   color: #1DA1F2;
