--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,8 @@
     <a href="../"  class="link-success login"> Home </a>
     <a href="/portfolios"  class="link-success login"> Portfolio </a>
     <% if (user) { %>
-      <a href="/logout">LOG OUT</a>
+      <a href="/logout" class="login">LOG OUT&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+      
       <% } else { %>
         <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
         <% } %>
@@ -22,6 +23,5 @@
     <h1><%= title %></h1>
 
 
-   
       
   </body>
