--- a/views/portfolios/index.ejs
+++ b/views/portfolios/index.ejs
@@ -6,19 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
         <link rel='stylesheet' href='/stylesheets/style.css' />
         <title></title>
     </head>
-
     <body>
         <h5>
-         
             <form method= "get" action="portfolios/new">
            <button class="shadow-lg p-3 mb-4 bg-body rounded"> Create Portfolio </button>
             </form>
         </h5>
-        
         <table id="text1" class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
@@ -34,15 +30,15 @@
             <tbody>
                 <% portfolios.sort((a, b) => b.portfolio.localeCompare(a.portfolio)).forEach(p => { %>
                     <tr>
-                        <% if (user && user._id.equals(p.user)) { %>
-                      <td><%= p.portfolio %><a href="/portfolios/<%= p._id %>"> edit</a></td>
+                        <% if (user && user._id.equals(p.user)) { %>  
+                      <td class="edit1"><%= p.portfolio %><a class="editA"  href="/portfolios/<%= p._id %>"><img class="edit"  src="https://o.remove.bg/downloads/cd14ac39-cea6-4caf-b4ab-67ff81ffaa0d/edit-removebg-preview.png"></a></td>
                       <td><%= p.date.toString().slice(0, 15) %></td>
                       <td>$<%= p.budget %></td>
                       <td><%= p.expenseType %></td>
                       <td>$<%= p.amount %></td>
                       <td>$<%= p.amountLeft = p.budget - p.amount %></td>
                       <td><form action="/portfolios/<%= p._id %>?_method=DELETE" method="POST">
-                        <button type="submit">x</button></td>
+                        <input class="edit" type="image" src="https://o.remove.bg/downloads/20d0a3ab-942a-49c8-b3e3-48d8d058f5f9/delete-removebg-preview.png"></input></td>
                         <% } %>
             
                     </tr>
