--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,15 @@
 <%- include('./partials/header') %>
   <head>
-   
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/stock.css' />
+    <link rel='stylesheet' href='/stylesheets/index.css' />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-   
   </head>
   <body>
-  
    <br>
-    <h2>This is the Batman Inc <%= title %></h2>
+    <h2></h2>
     <div id="container"></div>
+    <footer>
+    <h5 class="egg">Batman Inc <%= title %></h5>
+    </footer>
   </body>
 
 
