--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,24 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" type="image/png" href="/images/favicon.png"/>
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <title><%= title %></title>
 </head>
 <body>
   <nav>
    
-    <a href="../"  class="link-success login"> Home </a>
-    <a href="/portfolios"  class="link-success login"> Portfolio </a>
+    <a href="../"  class="link-success login"><button type="button" class="btn btn-outline-primary">Home</button></a>
+    <a href="/portfolios"  class="link-success login"><button type="button" class="btn btn-outline-primary">Portfolio</button></a>
     <% if (user) { %>
-      <a href="/logout" class="login">LOG OUT&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+      <a href="/logout" class="login"><button type="button" class="btn btn-outline-primary"><img src="https://i.imgur.com/FHjYyi0.png">Log Out</button></a>
       
       <% } else { %>
-        <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+      <a href="/auth/google" class="login"><button type="button" class="btn btn-outline-primary"><img src="https://i.imgur.com/FHjYyi0.png">Log In</button></a>
+
         <% } %>
   </nav>
   <main>
     <h1><%= title %></h1>
-
-
-      
   </body>
