--- a/views/portfolios/edit.ejs
+++ b/views/portfolios/edit.ejs
@@ -1,8 +1,9 @@
-<!-- <%- include('../partials/header') %> -->
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="/images/favicon.png"/>
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/newstyles.css' />
@@ -11,9 +12,7 @@
 </head>
 <body><br><br>
   <div class="brand-title">Edit Portfolio</div>
-    
   </div>
-
     <table id="lin" class="table table-striped table-hover table-bordered">
         <thead>
             <tr>
@@ -23,11 +22,9 @@
                 <th>Expense</th>
                 <th>Amount</th>
                 <th>Sum</th>
-                
             </tr>
         </thead>
         <tbody >
-         
                 <tr id="lin">
                   <td><%= detailsPortfolio.portfolio %></td>
                   <td><%= detailsPortfolio.date.toString().slice(0, 15)%></td>
@@ -35,28 +32,18 @@
                   <td><%= detailsPortfolio.expenseType %></td>
                   <td>$<%= detailsPortfolio.amount %></td>
                   <td>$<%= detailsPortfolio.amountLeft = detailsPortfolio.budget - detailsPortfolio.amount %></td>
-        
                 </tr>
-              <!-- Close the forEach using EJS here -->
-              
-            <!-- Write the line of EJS to iterate over movies using forEach -->
         </tbody>
     </table>
     <div class="container">
-
       <form name="portfolio" action="/portfolios/<%= detailsPortfolio._id %>?_method=PUT" method="POST" class="form">
         <div class="inputs"></div>
-
-  
-    
         <label>Portfolio
             <input type="text" name="portfolio" value="<%= detailsPortfolio.portfolio %>">
         </label><br>
-        
         <label>Budget Amount
             <input type="text" name="budget" value="<%= detailsPortfolio.budget %>">
         </label><br>
-        
           <label>Expense Category
             <select name="expenseType">
                 <option value="<%= detailsPortfolio.expenseType %>"><%= detailsPortfolio.expenseType %></option>
@@ -72,24 +59,17 @@
                 <option value="Other">Other</option>
             </select>
           </label><br>
-        
           <label>Amount Spent
             <input type="text" name="amount" min="0" max="9999999" value="<%=detailsPortfolio.amount %>">
           </label><br>
-        
           <label>Date
             <input type="datetime-local" name="date" value="<%= detailsPortfolio.date%>">
           </label><br><br>
           <input type="submit" class="btn btn-primary" value="Add Edits">
         </form> 
-        
         <form method= "get" action="/portfolios">
           <button class="btn btn-warning"> Return to Portfolio </button>
         </div>
           </form><br><br><br><br><br><br><br><br><br><br><br>
-        
-        
 </body>
-
-
 <%- include('../partials/footer') %>
