--- a/views/portfolios/new.ejs
+++ b/views/portfolios/new.ejs
@@ -1,8 +1,8 @@
-<!-- <%- include('../partials/header') %> -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/images/favicon.png"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/create.css' />
     <title></title>
@@ -10,33 +10,23 @@
 <body>
   <div class="login-box">
     <h2>Enter your information</h2>
-
 <form action="/portfolios" method="POST" class="form">
-
   <div class="user-box">
-
     <input type="text" name="portfolio" placeholder="Insert portfolio name">
     <label>Portfolio</label>
 </div>
-
 <div class="user-box">
-
 <input type="number" name="budget" placeholder="Insert budget amount">
 <label>Budget Amount</label>
 </div>
-
-
 <div class="user-box">
-  
   <input type="number" name="amount" min="0" max="9999999" placeholder="$$$">
   <label>Amount Spent</label>
 </div>
-
 <div class="user-box">
   <input type="datetime-local" name="date">
   <label>Date</label>
 </div>
-
 <div class="textE">
   <label>Expense Category</label>
   </div>
@@ -72,12 +62,10 @@
   <button style="background: transparent;"> Done </button>
 </form></a>
 </div>
-
 <br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br>
-
 <table id="text1"  class="table table-hover">
   <thead>
       <tr>
@@ -106,7 +94,5 @@
         <% }); %>
   </tbody>
 </table><br><br><br><br><br><br><br><br><br><br>
-
 </body>
-
 <%- include('../partials/footer') %>
