Finished except for Stocks chart

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,12 @@
   <body>
    <br>
     <h2></h2>
-    <div id="container"></div>
+    <div id="container">
+      <p> What is a financial portfolio? Simply put, it’s a collection of financial assets.</p>
+      <p> It could include stocks, bonds, cash and cash equivalents, or alternative investments. Here is a quick and easy way to get started with your portfolio, set up your budget today!</p>
+    </div>
     <footer>
     <h5 class="egg">Batman Inc <%= title %></h5>
     </footer>
   </body>
-
-
 <%- include('./partials/footer') %>
