--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -17,14 +17,14 @@
   
    body > nav {
     display: flex;
-    background-color: #aee1f9;
-    background-image: linear-gradient(315deg, #aee1f9 0%, #f6ebe6 74%);
+    background-color: #bdd4e7;
+    background-image: linear-gradient(315deg, #bdd4e7 0%, #8693ab 74%);
     position: relative;
     justify-content: center;
     align-items: center;
    
   }
-  
+ 
   body > main {
     grid-area: main;
     display: flex;
@@ -46,7 +46,12 @@
     padding: 0 0 20px; 
     border-bottom: double rgb(196, 196, 196);
  }
-
+p {
+ color: rgb(205, 203, 203); 
+ font-size: large;
+ font-family: 'Muli', sans-serif; 
+ margin-bottom: 15px; 
+}
   nav > a:hover {
     color: white;
   }
@@ -59,7 +64,11 @@
     display: flex;
     align-items: center;
   }
-  
+  #container{
+    width: 380px;
+    height: 600px;
+  }
+
   .card .card-content .card-title {
     margin-bottom: 10px;
   }
